package ch.uzh.group8.assignment4.exercise1;

public enum PlayAction {
  HIT,
  STAY
}
