package ch.uzh.group8.assignment4.exercise1;

public enum Suit {
  CLUBS,
  DIAMONDS,
  HEARTS,
  SPADES
}
